history and detail history

--- a/app/src/main/res/layout/history_item.xml
+++ b/app/src/main/res/layout/history_item.xml
@@ -83,6 +83,15 @@
                     android:text="1 Total Barang"
                     android:textSize="16dp"/>
 
+                <TextView
+                    android:visibility="invisible"
+                    android:id="@+id/statustext"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:text="Berhasil"
+                    android:textSize="16dp"/>
+
             </LinearLayout>
         </LinearLayout>
 
@@ -103,8 +112,5 @@
         </LinearLayout>
 
     </RelativeLayout>
-
-
-
 
 </androidx.cardview.widget.CardView>
