--- a/app/src/main/res/drawable/corner.xml
+++ b/app/src/main/res/drawable/corner.xml
@@ -3,7 +3,7 @@
 <item>
     <shape android:shape="oval">
         <corners android:radius="30px"/>
-        <solid android:color="@color/black"/>
+        <solid android:color="@color/white"/>
     </shape>
 </item>
 </selector>
