--- a/app/src/main/res/layout/detailhistory_item.xml
+++ b/app/src/main/res/layout/detailhistory_item.xml
@@ -14,35 +14,35 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
-        <ImageView
-            android:id="@+id/imgHistory"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginLeft="10dp"
-            android:background="@drawable/historyimg"/>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginTop="20dp"
-            android:layout_marginLeft="10dp">
+            <ImageView
+                android:id="@+id/imgHistorydetail"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="10dp"
+                android:background="@drawable/historyimg"/>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="10dp">
 
-            <TextView
-                android:id="@+id/detailnama_history"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="sans-serif-medium"
-                android:text="Spaghetti Bolognese"
-                android:textSize="18dp" />
-            <TextView
-                android:layout_marginTop="5dp"
-                android:id="@+id/detailjumlah_history"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="1 Barang"
-                android:textSize="16dp" />
-        </LinearLayout>
+                <TextView
+                    android:id="@+id/detailnama_history"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="sans-serif-medium"
+                    android:text="Spaghetti Bolognese"
+                    android:textSize="18dp" />
+                <TextView
+                    android:layout_marginTop="5dp"
+                    android:id="@+id/detailjumlah_history"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="1 Barang"
+                    android:textSize="16dp" />
+            </LinearLayout>
         </LinearLayout>
         <LinearLayout
             android:layout_below="@id/contentdetail"
