--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -1,46 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="wrap_content">
+    android:layout_width="370dp"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardCornerRadius="20dp"
+    android:layout_marginTop="10dp"
+    android:layout_marginLeft="10dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="71dp"
-        android:layout_margin="10dp"
+        android:layout_margin="8dp"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/txtQuantity"
+        <ImageView
+            android:id="@+id/fotomenucart"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:background="@drawable/historyimg"
+            android:layout_gravity="center"/>
+
+
+        <LinearLayout
+            android:layout_marginLeft="10dp"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_marginLeft="10dp"
-            android:gravity="center"
-            android:text="1"
-            android:textSize="25sp"
-            android:textStyle="bold" />
-
-
+            android:orientation="vertical">
             <TextView
                 android:id="@+id/txtNama"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
                 android:text="Nama Bla Bla Bla Bla"
-                android:textSize="25sp"
+                android:textSize="20sp"
                 android:textStyle="bold"
                 android:maxLines="2" />
-
-
+            <TextView
+                android:id="@+id/txtHarga"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="right"
+                android:text="5000"
+                android:layout_marginTop="3dp"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+        </LinearLayout>
         <TextView
-            android:id="@+id/txtHarga"
+            android:id="@+id/txtQuantity"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="right"
-            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:gravity="center|right"
-            android:text="5000"
+            android:text="1"
             android:textSize="25sp"
             android:textStyle="bold" />
-
 
 
     </LinearLayout>
