--- a/app/src/main/res/layout/detailhistory_item.xml
+++ b/app/src/main/res/layout/detailhistory_item.xml
@@ -15,7 +15,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
         <ImageView
-            android:id="@+id/imgHistory"
+            android:id="@+id/imgHistorydetail"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_marginTop="20dp"
