--- a/app/src/main/res/layout/detailhistory.xml
+++ b/app/src/main/res/layout/detailhistory.xml
@@ -110,7 +110,7 @@
         android:layout_marginRight="10dp"/>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycle_view"
+        android:id="@+id/recycle_view_detail"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/divider"
