--- a/app/src/main/res/layout/activity_detail_barang.xml
+++ b/app/src/main/res/layout/activity_detail_barang.xml
@@ -14,93 +14,97 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="-20dp">
+        android:layout_height="500dp"
+        android:layout_marginTop="-20dp"
+        app:cardCornerRadius="20dp">
         <LinearLayout
+            android:layout_margin="15dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
-            <LinearLayout
-                android:layout_marginTop="15dp"
-                android:layout_width="match_parent"
+
+            <TextView
+                android:id="@+id/detailmenu_kategori"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:text="Chicken"
+                android:textFontWeight="500"
+                android:textColor="#E31E1E"
+                android:textSize="20dp" />
 
                 <TextView
+                    android:layout_marginTop="10dp"
                     android:id="@+id/namaDetail"
-                    android:layout_width="220dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Nama"
                     android:textSize="30dp"
-                    android:textStyle="bold"
-                    android:layout_marginLeft="10dp"/>
-
-                <TextView
-                    android:id="@+id/hargaMenu"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Harga"
-                    android:textSize="30dp"
-                    android:textStyle="bold"
-                    android:layout_marginRight="10dp"
-                    android:gravity="center_horizontal|end"/>
-
-            </LinearLayout>
-
+                    android:textColor="@color/black"
+                    android:textStyle="bold"/>
 
             <TextView
                 android:id="@+id/deskripsiDetail"
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
                 android:text="Deskripsi"
-                android:textSize="25sp"
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginTop="35dp"/>
-
-            <LinearLayout
+                android:textSize="18sp"
+                android:layout_marginEnd="15dp"
+                android:layout_marginTop="15dp"/>
+            <TextView
+                android:id="@+id/hargaMenu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginTop="30dp"
-                android:gravity="center_horizontal">
+                android:text="Harga"
+                android:textSize="28dp"
+                android:textColor="#E31E1E"
+                android:fontFamily="sans-serif-medium"/>
 
-                <ImageButton
-                    android:src="@drawable/ic_decrement"
-                    android:id="@+id/decrement"
-                    android:layout_width="wrap_content"
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/white" />
+                    android:orientation="horizontal"
+                    android:gravity="center_horizontal"
+                    android:layout_marginTop="20dp">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/quantity"
-                    android:text="0"
-                    android:textSize="35sp"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginEnd="10dp"/>
+                    <ImageButton
+                        android:src="@drawable/ic_decrement"
+                        android:id="@+id/decrement"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@color/white" />
 
-                <ImageButton
-                    android:src="@drawable/ic_increment"
-                    android:id="@+id/increment"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@color/white" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/quantity"
+                        android:text="0"
+                        android:textSize="35sp"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginEnd="10dp"/>
 
-            </LinearLayout>
+                    <ImageButton
+                        android:src="@drawable/ic_increment"
+                        android:id="@+id/increment"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@color/white" />
 
+                </LinearLayout>
             <Button
+                android:layout_marginTop="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/submit"
                 android:text="Submit"
                 android:textSize="20sp"
-                android:layout_marginTop="35dp"
-                android:layout_marginStart="30dp"
-                android:layout_marginEnd="30dp"
                 android:background="@drawable/background_home"
-                android:textColor="@color/white"/>
+                android:textColor="@color/white"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp"/>
+
+
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
