--- a/app/src/main/res/layout/activity_detail_barang.xml
+++ b/app/src/main/res/layout/activity_detail_barang.xml
@@ -6,11 +6,23 @@
     android:layout_height="match_parent"
     tools:context=".DetailMenu"
     android:orientation="vertical">
-
-    <ImageView
-        android:id="@+id/imgDetail"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="340dp" />
+        android:layout_height="340dp">
+        <ImageView
+            android:id="@+id/imgDetail"
+            android:layout_width="match_parent"
+            android:layout_height="340dp" />
+        <Button
+            android:id="@+id/back_button"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@drawable/ic_baseline_arrow_back_24_white"
+            />
+    </RelativeLayout>
+
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -32,15 +44,15 @@
                 android:textColor="#E31E1E"
                 android:textSize="20dp" />
 
-                <TextView
-                    android:layout_marginTop="10dp"
-                    android:id="@+id/namaDetail"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Nama"
-                    android:textSize="30dp"
-                    android:textColor="@color/black"
-                    android:textStyle="bold"/>
+            <TextView
+                android:layout_marginTop="10dp"
+                android:id="@+id/namaDetail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Nama"
+                android:textSize="30dp"
+                android:textColor="@color/black"
+                android:textStyle="bold"/>
 
             <TextView
                 android:id="@+id/deskripsiDetail"
@@ -61,37 +73,37 @@
 
 
 
-                <LinearLayout
-                    android:layout_width="match_parent"
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center_horizontal"
+                android:layout_marginTop="20dp">
+
+                <ImageButton
+                    android:src="@drawable/ic_decrement"
+                    android:id="@+id/decrement"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:gravity="center_horizontal"
-                    android:layout_marginTop="20dp">
+                    android:background="@color/white" />
 
-                    <ImageButton
-                        android:src="@drawable/ic_decrement"
-                        android:id="@+id/decrement"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@color/white" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/quantity"
+                    android:text="0"
+                    android:textSize="35sp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="10dp"/>
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/quantity"
-                        android:text="0"
-                        android:textSize="35sp"
-                        android:layout_marginStart="10dp"
-                        android:layout_marginEnd="10dp"/>
+                <ImageButton
+                    android:src="@drawable/ic_increment"
+                    android:id="@+id/increment"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@color/white" />
 
-                    <ImageButton
-                        android:src="@drawable/ic_increment"
-                        android:id="@+id/increment"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@color/white" />
-
-                </LinearLayout>
+            </LinearLayout>
             <Button
                 android:layout_marginTop="10dp"
                 android:layout_width="match_parent"
