--- a/app/src/main/res/layout/activity_kurir_detail.xml
+++ b/app/src/main/res/layout/activity_kurir_detail.xml
@@ -49,6 +49,8 @@
             android:layout_marginLeft="15dp"
             android:layout_marginTop="10dp"
             android:fontFamily="sans-serif-medium"
+            android:maxLines="1"
+            android:ellipsize="end"
             android:text="lokasi"
             android:textSize="20dp" />
         <LinearLayout
